refactor (main): modules split and design token

--- a/playground/02-vertical-tree/index.html
+++ b/playground/02-vertical-tree/index.html
@@ -12,7 +12,7 @@
   <p>This customization generates a simple graph.</p>
 
   <oid-sphere stylesheets="/lib/">
-    <graph-oid custom="example">
+    <graph-oid custom="example" layout="vh">
     </graph-oid>
   </oid-sphere>
 </body>
