refactor (build): converted Webpack setup to Vite

--- a/playground/02-vertical-tree/index.html
+++ b/playground/02-vertical-tree/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Customizing the Button Oid</title>
-  <link rel="stylesheet" href="/lib/oiddefault.css">
-  <link rel="stylesheet" href="/lib/oid-graph.css">
+  <link rel="stylesheet" href="/lib/foundation/oiddefault.css">
+  <link rel="stylesheet" href="/lib/graph/oid-graph.css">
   <script src="graph-oid-custom.js" type="module"></script>
 </head>
 <body>
   <h1>Customizing the Graph Oid</h1>
   <p>This customization generates a simple graph.</p>
 
-  <oid-sphere stylesheets="/lib/">
+  <oid-sphere stylesheets="/lib/graph/">
     <graph-oid custom="example" layout="vh">
     </graph-oid>
   </oid-sphere>
